# intend-to-slack

./: .gitignore  CLAUDE.md  daily_plan.py  intend-api.txt  intend.py  pyproject.toml  slack-app-manifest.yaml  slack-formatting.md  slack.py  summary.py  toggl.py  toggle_api.json  weekly_recap.py
.github/workflows/: daily-summary.yml
