[project]
name = "intend-summary"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
intend-summary = "summary:main"
weekly-recap = "weekly_recap:main"
daily-plan = "daily_plan:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["summary", "intend", "toggl", "slack", "daily_plan", "weekly_recap"]
